添加前端，完成详情页的编辑和管理功能